# backend/src/api/v1/router.py
@@ -5,10 +5,12 @@ from sqlalchemy import text
 from sqlalchemy.ext.asyncio import AsyncSession
 
 from src.api.v1.auth.router import router as auth_router
+from src.api.v1.files.router import router as files_router
 from src.db.session import get_db
 
 router = APIRouter()
 router.include_router(auth_router)
+router.include_router(files_router)
 
 
 @router.get("/health")
